test/scc/decl/semantic-errors/078.t
_Thread_local void test()
{
}